# runcase

./: .gitignore  LICENSE  README.md  pyproject.toml
runcase/: cli.py  runner.py  scaffold.py  store.py
runcase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_runner.py  test_scaffold.py  test_store.py
