[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "runcase"
version = "0.1.0"
description = "Local CLI tool for DSA practice with test case management"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
runcase = "runcase.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runcase*"]
